# royal-road-downloader

./: .gitignore  Delve.html  README.md  Test Book  main.py  pyproject.toml
downloader/: chapter.py  chapter_fetcher.py  constants.py  download.py  endpoints.py  fetch.py  fetcher.py  fiction.py  log.py  mock_database.py  renderer.py  simple_database.py
