[tool.poetry]
name = "royal-road-downloader"
version = "0.1.0"
description = "Download books from Royal Road website"
authors = ["Philip Bretz"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests-html = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
