[tool.poetry]
name = "royal-road-downloader"
version = "0.1.0"
description = "Download books from Royal Road website"
authors = ["Philip Bretz"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests-html = "^0.10.0"
lxml-html-clean = "^0.4.1"
pydantic = "^2.10.5"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
